# SeaBot_QQ

./: .env.dev  .env.prod  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  plugins.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
deploy/: docker-compose.yml
deploy/go-cqhttp/: config.yml
go-cqhttp/: config.yml
seabot/plugins/basic_reply/: __init__.py  config.py
seabot/plugins/clockin_reminder/: __init__.py  config.py
seabot/plugins/epidemic_data_query/: __init__.py  config.py
seabot/plugins/github_reposity_thumbnail/: __init__.py  data_source.py
seabot/plugins/hnu_electricity_fee_query/: __init__.py  data_source.py
seabot/plugins/hot_news/: __init__.py  config.py  data_source.py
seabot/plugins/leetcode_daily/: __init__.py  data_source.py
seabot/plugins/leetcode_everyday/: __init__.py  config.py  data_source.py
seabot/plugins/one_saying/: __init__.py  data_source.py
seabot/plugins/timed_reminder/: __init__.py
seabot/plugins/timing_reminder/: __init__.py  config.py
seabot/plugins/today_in_history/: __init__.py  config.py
seabot/plugins/weather_saying_card/: __init__.py  config.py
seabot/plugins/yiyan/: __init__.py  config.py  data_source.py
src/plugins/basic_reply/: __init__.py
src/plugins/card/: __init__.py  config.py
src/plugins/chat/: __init__.py
src/plugins/clockin/: __init__.py  config.py  data_source.py
src/plugins/electricity/: __init__.py
src/plugins/epidemic_data_query/: __init__.py  config.py  data_source.py
src/plugins/github/: __init__.py
src/plugins/hot_news/: config.py
(+11 files in other folders)
